# json2splunk-rs

./: Cargo.toml  README.md  indexer_patterns_sample.yml
normalize/windows/: hives.vrl  prefetch.vrl
src/: json2splunk.rs  main.rs
src/splunk_utils/: http_event_collector.rs  mod.rs  splunk_helper.rs
src/utils/: file_matcher.rs  mod.rs  utils.rs  vrl.rs
