[package]
name = "json2splunk-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true

# [profile.release]
# debug = true

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.1"
clap = { version = "4.1", features = ["derive"] }
regex = "1.7"
log = "0.4"
env_logger = "0.11.7"
walkdir = "2.3"
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls"] }
quick-xml = "0.38.3"
chardet = "0.2.4"
num_cpus = "1.15"
hostname = "0.4.0"
encoding_rs = "0.8.35"
rayon = "1.7"
crossbeam-channel = "0.5"
chrono = "0.4.42"
uuid = { version = "1.18", features = ["v4", "fast-rng"] }
vrl = { version = "0.28.1", default-features = true }
indexmap = { version = "2.12.0", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
